--- a/docsrc/mainpage.dox
+++ b/docsrc/mainpage.dox
@@ -45,7 +45,7 @@ You need the following tools in order to build Bobura:
 - [Visual Studio 2013 Update 4](http://www.microsoft.com/) (Express for Desktop is not available. Use Community instead.)
 - [Boost C++ Libraries 1.57.0](http://www.boost.org/)
 - [bzip2](http://www.bzip.org)
-- [WiX 3.9](http://wixtoolset.org/)
+- [WiX 3.9 R2](http://wixtoolset.org/)
 - [Doxygen 1.8.9.1](http://www.doxygen.org) (to generate API documents)
 - [Graphviz](http://www.graphviz.org) (to generate API documents)
 
