Move bobura::oudia_diagram_dialog to bobura::model::serializer #99

--- a/bobura_model/include/bobura/model/message/0namespace.dox
+++ b/bobura_model/include/bobura/model/message/0namespace.dox
@@ -9,3 +9,7 @@
 /*! \namespace bobura::model::message
     \brief The namespace for message observers.
 */
+
+/*! \namespace bobura::model::message::oudia_diagram_dialog
+    \brief The namespace for message observers of the OuDia diagram dialog.
+*/
