--- a/docsrc/mainpage.dox
+++ b/docsrc/mainpage.dox
@@ -41,7 +41,7 @@ Building on Windows
 
 You need the following tools in order to build Bobura:
 
-- [Visual Studio 2015 Update 3](http://www.microsoft.com/) (Express for Desktop is not available. Use Community instead.)
+- [Visual Studio 2017](http://www.microsoft.com/) (Express for Desktop is not available. Use Community instead.)
 - [Boost C++ Libraries 1.63.0](http://www.boost.org/)
 - [bzip2](http://www.bzip.org)
 - [WiX 3.10.3](http://wixtoolset.org/)
