--- a/docsrc/mainpage.dox
+++ b/docsrc/mainpage.dox
@@ -30,7 +30,7 @@ The libraries are available on Windows and UNIX-like systems.
 It's tested on the following systems:
 
 - [Windows 10](http://www.microsoft.com/)
-- [Debian GNU/Linux 8](http://www.debian.org/)
+- [Debian GNU/Linux 9](http://www.debian.org/)
 
 
 How to Build {#how_to_build}
@@ -98,7 +98,7 @@ On UNIX, we cannot build a Bobura executable yet. However, we can build the Bobu
 
 You need the following tools in order to build Bobura libraries:
 
-- [GCC 4.9.2 or 5.4.0](http://www.gnu.org/)
+- [GCC 6.3.0](http://www.gnu.org/) or [Clang 3.8](http://clang.llvm.org/)
 - [GNU Make](http://www.gnu.org/)
 - [Boost C++ Libraries 1.64.0](http://www.boost.org/)
 - [bzip2](http://www.bzip.org)
@@ -142,7 +142,7 @@ $ ./bootstrap.sh
 
 ### Build Sequence
 
-Run `configure` to generate Makefiles. `--enable-precompilation` enables precompilation by generating `.gch` files.
+Run `configure` to generate Makefiles. `--enable-precompilation` enables precompilation.
 
 In case you downloaded the source code archive and Tetengo2 is installed in the directory `/usr/local`:
 
