Update configure.ac and the Doxygen main page #163

--- a/docsrc/mainpage.dox
+++ b/docsrc/mainpage.dox
@@ -20,7 +20,7 @@ Requirements {#requirements}
 Bobura application
 ------------------
 
-- [Windows 7](http://www.microsoft.com/) or later
+- [Windows 7](https://www.microsoft.com/) or later
 
 Bobura libraries
 ----------------
@@ -29,8 +29,8 @@ The libraries are available on Windows and UNIX-like systems.
 
 It's tested on the following systems:
 
-- [Windows 10](http://www.microsoft.com/)
-- [Debian GNU/Linux 9](http://www.debian.org/)
+- [Windows 10](https://www.microsoft.com/)
+- [Debian GNU/Linux 9](https://www.debian.org/)
 
 
 How to Build {#how_to_build}
@@ -41,20 +41,25 @@ Building on Windows
 
 You need the following tools in order to build Bobura:
 
-- [Visual Studio 2017](http://www.microsoft.com/)
-- [Boost C++ Libraries 1.66.0](http://www.boost.org/)
-- [bzip2](http://www.bzip.org)
-- [WiX 3.11.0](http://wixtoolset.org/)
-- [Doxygen 1.8.14](http://www.doxygen.org) (to generate API documents)
-- [Graphviz](http://www.graphviz.org) (to generate API documents)
+- [Visual Studio 2017](https://www.microsoft.com/)
+- [Boost C++ Libraries 1.66.0](https://www.boost.org/)
+- [bzip2](https://www.bzip.org)
+- [WiX 3.11.0](https://wixtoolset.org/)
+- Windows Subsystem for Linux
+  - [GNU Make](https://www.gnu.org/)
+  - [include-what-you-use](https://include-what-you-use.org/)
+  - [ClangFormat 5.0](https://clang.llvm.org/docs/ClangFormat.html)
+  - [Dos2Unix](https://waterlan.home.xs4all.nl/dos2unix.html)
+  - [Doxygen 1.8.14](http://www.doxygen.org)
+  - [Graphviz](https://www.graphviz.org)
 
 You can obtain the source code either by downloading an archive or by cloning the Git repository.
 
 ### Downloading the Source Code Archive
-f
-The latest archives can be downloaded from [the web site](http://www.tetengo.org/).
 
-Deploy the Tetengo2 libraries as a submodule. Get the Tetengo2 archive in [the web site](http://www.tetengo.org/),
+The latest archives can be downloaded from [the web site](https://www.tetengo.org/).
+
+Deploy the Tetengo2 libraries as a submodule. Get the Tetengo2 archive in [the web site](https://www.tetengo.org/),
 unpack the archive, execute
 
 ~~~~{.bat}
@@ -98,21 +103,24 @@ On UNIX, we cannot build a Bobura executable yet. However, we can build the Bobu
 
 You need the following tools in order to build Bobura libraries:
 
-- [GCC 6.3.0](http://www.gnu.org/) or [Clang 3.8](http://clang.llvm.org/)
-- [GNU Make](http://www.gnu.org/)
-- [Boost C++ Libraries 1.66.0](http://www.boost.org/)
-- [bzip2](http://www.bzip.org)
-- [Doxygen 1.8.14](http://www.doxygen.org) (to generate API documents)
-- [Graphviz](http://www.graphviz.org) (to generate API documents)
+- [GCC 6.3.0](https://www.gnu.org/) or [Clang 3.8](https://clang.llvm.org/)
+- [GNU Make](https://www.gnu.org/)
+- [Boost C++ Libraries 1.66.0](https://www.boost.org/)
+- [bzip2](https://www.bzip.org)
+- [include-what-you-use](https://include-what-you-use.org/)
+- [ClangFormat 5.0](https://clang.llvm.org/docs/ClangFormat.html)
+- [Dos2Unix](https://waterlan.home.xs4all.nl/dos2unix.html)
+- [Doxygen 1.8.14](http://www.doxygen.org)
+- [Graphviz](https://www.graphviz.org)
 
 You can obtain the source code either by downloading an archive or by cloning the Git repository.
 
 ### Downloading the Source Code Archive
 
-The latest archives can be downloaded from [the web site](http://www.tetengo.org/).
+The latest archives can be downloaded from [the web site](https://www.tetengo.org/).
 
 Get the Tetengo2 archive from the web site.
-[Build the Tetengo libraries and install it](http://www.tetengo.org/jenkins/view/Tetengo2/job/tetengo2-master-linux-doc/lastSuccessfulBuild/artifact/doc/index.html#how_to_build).
+[Build the Tetengo libraries and install it](https://www.tetengo.org/jenkins/view/Tetengo2/job/tetengo2-master-linux-doc/lastSuccessfulBuild/artifact/doc/index.html#how_to_build).
 
 ### Cloning the Repository
 
@@ -137,8 +145,8 @@ $ ./bootstrap.sh
 
 `bootstrap.sh` requires the following tools:
 
-- [Autotools (Autoconf, Automake, etc.)](http://www.gnu.org/)
-- [Autoconf Archive](http://www.gnu.org/)
+- [Autotools (Autoconf, Automake, etc.)](https://www.gnu.org/)
+- [Autoconf Archive](https://www.gnu.org/)
 
 ### Build Sequence
 
@@ -180,7 +188,7 @@ $ make doc
 
 Copyright (C) 2007-2018 kaoru
 
-<http://www.tetengo.org/>
+<https://www.tetengo.org/>
 
 $Id$
 
