--- a/docsrc/mainpage.dox
+++ b/docsrc/mainpage.dox
@@ -41,7 +41,7 @@ Building on Windows
 
 You need the following tools in order to build Bobura:
 
-- [Visual Studio 2017 Update 7](https://www.microsoft.com/)
+- [Visual Studio 2017 15.8](https://www.microsoft.com/)
 - [Boost C++ Libraries 1.67.0](https://www.boost.org/)
 - [bzip2](https://www.bzip.org)
 - [WiX 3.11.0](https://wixtoolset.org/)
